--- a/.gitignore
+++ b/.gitignore
@@ -387,6 +387,9 @@ MSBuild_Logs/
 # BeatPulse healthcheck temp database
 healthchecksdb
 
+# SQLite database files
+Database/QuizApp.db
+
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
 
